[package]
name = "fractal_bakery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4.2", features = ["canvas", "image"] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", branch = "main", default-features = false, features = [
    "number_input",
    "color_picker"
] }
image = "0.24.2"
decimal = "2.1.0"
rayon = "1.5.3"
